# ajna_nutri_wealth_backend_v2

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_TRIGGER.md  Dockerfile  Dockerfile.dev  README.md  ai_config.json  aws-auth-export.json  cleanup_backend.sh  config.json  deploy.sh  local_server.py  package.json  pyproject.toml  requirements.txt  serverless-async.yml  tenants.json  test_local.py
.github/workflows/: deploy-backend.yml
archive/: queue.py
archive/test_scripts/: add_test_user.py  check_food_entries.py  check_tables.py  (+28 more)
aws/: github-oidc-setup.sh
docs/: AI_ANALYSIS_FLOW.md  SECURITY_IMPROVEMENTS.md
scripts/: check_ibex_schema.py  check_status_direct.py  check_user_data.py  cleanup.sh  cleanup_auth.py  create_database.py  create_users_table.sh  debug_async_handler.py  debug_tables.py  delete_all_entries.py  fix-lambda-deployment.sh  fix_user_id_associations.py  grant_admin_direct.py  init_db.py  make_admin_with_auth.py  make_user_admin.py  migrate_images_to_s3.py  migrate_to_optimized.py  recover_lost_entries.py  reset_and_seed.py  run_docker.sh  run_tests.sh  setup_auth.py  setup_cognito.sh  setup_new_tables.py  setup_nutriwealth_db.py  test_all.sh  test_backend_api.sh  test_ibex_storage.py  test_queue_with_image.sh  test_receipt.sh  test_s3_upload.py  test_workout.sh  verify_analysis.py
src/: __init__.py  app.py  app_optimized.py  config.json  main.py  requirements.txt  router.py
tests/: performance_test.py  test_all_endpoints.py  test_all_endpoints.sh  test_function_url.py  test_improvements.py  test_new_table.py  test_optimization.py  test_performance.py  test_performance_quick.py  test_quick.sh  test_simple_write.py  test_storage_fix.py  test_warm_performance.py
(+85 files in other folders)
